<resources>
    <string name="app_name">千里眼</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="network_isnot_available">网络连接异常</string>
    <string name="User_name_cannot_be_empty">用户名不能为空</string>
    <string name="Password_cannot_be_empty">密码不能为空</string>
    <string name="Is_landing">正在登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail_username_psw">用户名或密码错误</string>
    <string name="head">管理端</string>
    <string name="eye">监视端</string>
    <string name="head_mode">HeadMode</string>
    <string name="user_removed">您的账号已被移除，请联系管理员</string>
    <string name="relogined">您的账号已在别处登录！</string>
    <string name="btn_over">断开</string>
    <string name="connect_fail">连接失败</string>
    <string name="connecting">正在连接</string>
    <string name="waiting_for_eye">正在等待终端响应</string>
    <string name="refused">已拒绝</string>
    <string name="peer_offline">该终端未联网</string>
    <string name="busy">该终端网络繁忙,正在尝试重连</string>
    <string name="not_answer">该终端未响应</string>
    <string name="node_using">该终端正在远程操控，无法退出</string>
    <string name="press_exit">再按一次退出程序</string>
    <string name="loading">正在加载...</string>
    <string name="change_name">改名</string>
    <string name="real_time">实时</string>
    <string name="history_record">记录</string>
    <string name="sure">确定</string>
    <string name="loading_device_list">正在加载设备列表</string>
    <string name="decoding">正在解码</string>
    <string name="load_fail">加载失败</string>
    <string name="click_to_retry">点击重试</string>
    <string name="retry">重试</string>
    <string name="loading_device_name">正在加载设备名称...</string>
    <string name="none_device">无可用设备</string>
    <string name="loading_video_list">正在加载录像列表</string>
    <string name="none_video">暂无录像</string>
    <string name="play">播放</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="download_failed">下载失败</string>
    <string name="downloading">正在下载</string>
    <string name="download_path">下载到文件夹</string>
    <string name="open">打开</string>
    <string name="login_fail_server">连接不到服务器</string>
    <string name="left">←</string>
    <string name="device_list">设备列表</string>
    <string name="menu">菜单</string>
    <string name="refresh">刷新</string>
    <string name="refresh_success">刷新成功</string>
    <string name="video_list">录像列表</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="speaker_off">话筒已关闭</string>
    <string name="speaker_on">话筒已打开</string>
</resources>
