<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title"
        />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/layout_title"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_centerVertical="true"
            android:background="#fff"
            android:hint="@string/user_name"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textColor="#000"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:background="#fff"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dip"
            android:singleLine="true"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_head_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/head"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_eye_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/eye"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/cl_snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>